Create CI action to build APK and update README with link to APK.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RotorDroid</string>
+    <string name="scanSwitch">Scan</string>
+    <string name="freqSelector">Frequency selector</string>
 </resources>
