--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="fastSwitch">FastMode</string>
     <string name="LBandSwitch">L Band</string>
     <string name="freqSelector">Frequency selector</string>
+    <string name="RSSI_NAME">RSSI_NAME</string>
+    <string name="RSSI_Value">RSSI_Value</string>
+    <string name="MIN_MHZ">MIN_MHZ</string>
+    <string name="MAX_MHZ">MAX_MHZ</string>
 </resources>
